syntax = "proto3";
package shareledger.swap;

import "gogoproto/gogo.proto";
import "swap/params.proto";
import "swap/id.proto";
import "swap/request.proto";
import "swap/batch.proto";
import "swap/format.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/sharering/shareledger/x/swap/types";

// GenesisState defines the swap module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Id idList = 2 [(gogoproto.nullable) = false];
  repeated Request requestList = 3 [(gogoproto.nullable) = false];
  uint64 requestCount = 4;
  repeated Batch batchList = 5 [(gogoproto.nullable) = false];
  uint64 batchCount = 6;
  repeated Format formatList = 7 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
